# opensearch-client-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  duplicate_remove.py  dupplicated_struct_remover.py  extract_dupplicates.py  licenserc.toml  run-coverage.sh  rust-toolchain.toml  rustfmt.toml  setup_cargo.sh  split_sections.py  splitter.py
examples/handle-search-response/: Cargo.toml
examples/handle-search-response/src/: main.rs
opensearch-cli/: Cargo.toml  README.md
opensearch-cli/src/: dumper.rs  main.rs  restorer.rs
opensearch-cli/src/actions/: dump_pipelines.rs  mod.rs
opensearch-client/: Cargo.toml  README.md  fix_code.py
opensearch-client/backup/types/: builder.rs  bulk.rs  cat.rs  cluster.rs  common.rs  dangling.rs  delete.rs  indices.rs  ingest.rs  mod.rs  nodes.rs  putscript.rs  snapshot.rs  tasks.rs  user.rs
opensearch-client/docs/: AccountDetails.md  ActionGroup.md  ActionObjectStructure.md  AuditConfig.md  AuditConfigWithReadOnly.md  AuditLogsConfig.md  Bytes.md  CatAllPitSegmentsResponseContent.md  CatPitSegment.md  CatPitSegmentsBodyParams.md  CatPitSegmentsResponseContent.md  CertificatesDetail.md  ChangePasswordRequestContent.md  ChangePasswordResponseContent.md  ClusterGetSettingsResponseContent.md  ClusterHealthLevel.md  ClusterPutSettingsBodyParams.md  ClusterPutSettingsResponseContent.md  ClusterRerouteMetricMember.md  ComplianceConfig.md  Conflicts.md  CreateActionGroupResponseContent.md  CreatePitResponseContent.md  CreateRoleMappingResponseContent.md  CreateRoleResponseContent.md  CreateTenantParams.md  CreateTenantResponseContent.md  CreateUserResponseContent.md  DataStream.md  DataStreamIndex.md  DataStreamStatus.md  DataStreamTimestampField.md  DefaultApi.md  DefaultOperator.md  DeleteActionGroupResponseContent.md  DeleteAllPitsResponseContent.md  DeleteDistinguishedNamesResponseContent.md  DeletePitBodyParams.md  DeletePitResponseContent.md  DeleteRoleMappingResponseContent.md  (+82 more)
opensearch-client/fixes/: enum_string_array.tmpl  enum_string_number.tmpl  enums_string_num.json
opensearch-client/src/: auth_middleware.rs  builder.rs  builder_search.rs  bulk.rs  bulker.rs  client.rs  credentials.rs  document.rs  lib.rs  progenitor_client.rs  search.rs  types.rs
opensearch-client/src/apis/: configuration.rs  default_api.rs  mod.rs
opensearch-client/src/asynchronous_search/: asynchronous_search_api.rs  asynchronous_search_stats.rs  delete_response.rs  mod.rs  nodes_stats.rs  response_body.rs  search.rs  stats_response.rs
opensearch-client/src/cat/: builder.rs  cat_api.rs  mod.rs  types.rs
opensearch-client/src/client/: auth_middleware.rs  configuration.rs  credentials.rs  mod.rs
opensearch-client/src/cluster/: allocation_explain_request_body_json.rs  allocation_explain_response.rs  builder.rs  cluster_api.rs  component_template.rs  component_template_node.rs  component_template_summary.rs  delete_weighted_routing.rs  get_component_template_response.rs  get_settings_response.rs  mod.rs  pending_tasks_response.rs  put_component_template.rs  put_component_template_request_body_json.rs  put_settings.rs  put_settings_request_body_json.rs  put_settings_response.rs  put_weighted_routing_response.rs  remote_info_response.rs  reroute_request_body_json.rs  types.rs
opensearch-client/src/common/: acknowledged_response_base.rs  array_or_json.rs  base_node.rs  bulk_by_scroll_failure.rs  bulk_by_scroll_task_status.rs  bulk_by_scroll_task_status_or_exception.rs  bulk_by_scroll_task_status_value.rs  clear_scroll.rs  clear_scroll_not_found_json.rs  clear_scroll_request_body_json.rs  clear_scroll_response.rs  cluster_details.rs  cluster_statistics.rs  common_api.rs  completion_stats.rs  coords_geo_bounds.rs  count.rs  count_request_body_json.rs  count_response.rs  delete_by_query.rs  delete_by_query_request_body_json.rs  dict.rs  distance_unit.rs  doc_stats.rs  doc_status.rs  error_cause.rs  error_cause_value.rs  error_response_base.rs  error_response_base_value.rs  explain.rs  explain_request_body_json.rs  explain_response.rs  field_caps.rs  field_caps_request_body_json.rs  field_caps_response.rs  field_memory_usage.rs  field_size_usage.rs  field_sort.rs  fielddata_stats.rs  flush_stats.rs  (+131 more)
opensearch-client/src/core/: mod.rs
opensearch-client/src/dangling_indices/: dangling_indices_api.rs  list_dangling_indices_response.rs  mod.rs
opensearch-client/src/indices/: alias.rs  alias_definition.rs  analyze_request_body_json.rs  analyze_response.rs  builder.rs  clone.rs  clone_request_body_json.rs  create_data_stream.rs  create_data_stream_request_body_json.rs  create_request_body_json.rs  create_response.rs  data_stream.rs  data_stream_index.rs  data_stream_stats.rs  data_stream_timestamp_field.rs  data_streams_stats_response.rs  fielddata_frequency_filter.rs  get_alias_response.rs  get_data_stream_response.rs  get_field_mapping_response.rs  get_index_template_response.rs  get_mapping_response.rs  get_settings_response.rs  get_template_response.rs  index_error.rs  index_error_cause.rs  index_get_upgrade_status.rs  index_routing.rs  index_routing_allocation.rs  index_routing_allocation_disk.rs  index_routing_allocation_include.rs  index_routing_allocation_initial_recovery.rs  index_routing_rebalance.rs  index_segment_sort.rs  index_setting_blocks.rs  index_settings.rs  index_settings_analysis.rs  index_settings_analyze.rs  index_settings_highlight.rs  index_settings_indexing.rs  (+88 more)
opensearch-client/src/ingest/: builder.rs  ingest_api.rs  mod.rs  pipeline.rs  processor_container.rs  processor_grok_response.rs  put_pipeline.rs  simulate_request_body_json.rs  simulate_response.rs  (+1 more)
opensearch-client/tests/: bulker_test.rs
opensearch-dsl/: Cargo.toml  README.md
opensearch-dsl/src/: lib.rs  macros.rs
opensearch-macro/: Cargo.toml
opensearch-macro/examples/: documentation_examples.rs  usage.rs
opensearch-macro/src/: lib.rs  models.rs  opensearch_record.rs
opensearch-macro/tests/: integration_test.rs
opensearch-testcontainer/: Cargo.toml  README.md
opensearch-testcontainer/src/: lib.rs
(+1403 files in other folders)
