[workspace]
members = [
  "opensearch-testcontainer",
  "opensearch-dsl",
  "opensearch-client",
  "opensearch-cli",
  "xtask",
  "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Alberto Paro"]
documentation = "https://docs.rs/opensearch-client"
license = "Apache-2.0"
repository = "https://github.com/aparo/opensearch-client-rs"
keywords = ["opensearch"]
readme = "README.md"

[workspace.dependencies]
opensearch-client = { path = "./opensearch-client/" }
opensearch-dsl = { path = "./opensearch-dsl/" }
opensearch-testcontainer = { path = "./opensearch-testcontainer/" }


[workspace.metadata.precommit]
fmt = "cargo fmt"
sort = "cargo sort -w"
