[workspace]
members = [
    # "opensearch-testcontainer",
    "opensearch-dsl",
    "opensearch-client",
    # "opensearch-macro",
    "opensearch-cli",
    # "xtask",
    # "examples/*",
]
resolver = "2"

[workspace.package]
description = "OpenSearch Client"
version = "0.3.0"
edition = "2021"
authors = ["Alberto Paro"]
documentation = "OpenSearch Client"
license = "Apache-2.0"
repository = "https://github.com/aparo/opensearch-client-rs"
keywords = ["opensearch"]
readme = "README.md"

[workspace.dependencies]
opensearch-client = { path = "./opensearch-client/" }
opensearch-dsl = { path = "./opensearch-dsl/" }
opensearch-macro = { path = "./opensearch-macro/" }
opensearch-testcontainer = { path = "./opensearch-testcontainer/" }


[workspace.metadata.precommit]
fmt = "cargo fmt"
sort = "cargo sort -w"
