[workspace]
members = [
    "opensearch-testcontainer",
    "opensearch-dsl",
    "opensearch-client",
    "opensearch-macro",
    "opensearch-cli",
]
resolver = "2"

[workspace.package]
description = "OpenSearch Client"
version = "0.3.0"
edition = "2021"
authors = ["Alberto Paro"]
documentation = "OpenSearch Client"
license = "Apache-2.0"
repository = "https://github.com/aparo/opensearch-client-rs"
keywords = ["opensearch"]
readme = "README.md"

[workspace.dependencies]
opensearch-client = { path = "./opensearch-client/", version = "0.3.0" }
opensearch-dsl = { path = "./opensearch-dsl/", version = "0.3.0" }
opensearch-macro = { path = "./opensearch-macro/", version = "0.3.0" }
opensearch-testcontainer = { path = "./opensearch-testcontainer/", version = "0.3.0" }


[workspace.metadata.precommit]
fmt = "cargo fmt"
sort = "cargo sort -w"
