[package]
name = "opensearch-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Command line interface for OpenSearch"
keywords = ["opensearch", "cli", "command line"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensearch-client = { workspace = true, features = [
    "search",
    "indices",
    "tools",
] }
opensearch-dsl = { workspace = true }
clap = { version = "4.5.54", features = ["derive", "env"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-compression = { version = "0.4.37", features = ["tokio", "zstd"] }
futures = "0.3.31"
dotenvy = "0.15.7"

[features]
default = []
