[package]
name = "opensearch-client"
description = "Strongly typed OpenSearch Client"
version.workspace = true
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
opensearch-dsl = { workspace = true, optional = true }
tokio = { version = "1.39.2", features = ["full"] }
bytes = "1.7.1"
futures-util = "0.3.30"
futures = "0.3.30"
percent-encoding = "2.3.1"
regress = "0.10.0"
http = "1.1"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "native-tls",
] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_urlencoded = "0.7.1"
tracing = "0.1.40"
thiserror = "1.0.63"
derive_builder = "0.20.0"
# client stuff
base64 = "0.22.1"
task-local-extensions = "0.1.4"
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-retry = "0.6.1"
reqwest-tracing = "0.5.3"
anyhow = "1.0.86"
async-trait = "0.1.81"
url = "2.5.2"
# miette = "5.10.0"
walkdir = { version = "2.5.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http-cache-reqwest = "0.14.0"

[dev-dependencies]
opensearch-testcontainer = { workspace = true }
testcontainers = "0.21.1"
tracing-test = "0.2.5"


[features]
default = []
full = [
    "search",       # search features
    "cat",
    "cluster",
    "indices",
    "ingest",
    "nodes",
    "ml",
    "mtermvectors",
    "remote",
    "security",
    "snapshot",
    "tasks",
    "tools",
]
quickwit = []
search = ["dep:opensearch-dsl"]
cat = []
cluster = []
indices = ["search"]
ingest = []
nodes = []
mtermvectors = []
ml = []
remote = []
security = []
snapshot = []
tasks = []
# custom features
tools = ["indices", "ingest", "dep:walkdir", "ml"]
