[package]
name = "opensearch-client"
description = "Strongly typed OpenSearch Client"
version.workspace = true
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
opensearch-dsl = { workspace = true, optional = true }
tokio = { version = "1.45.1", features = ["full"] }
bytes = "1.10.1"
futures-util = "0.3.31"
futures = "0.3.31"
percent-encoding = "2.3.1"
regress = "0.10.3"
http = "1.3"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tracing = "0.1.41"
thiserror = "2.0.12"
derive_builder = "0.20.2"
# client stuff
base64 = "0.22.1"
task-local-extensions = "0.1.4"
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
anyhow = "1.0.98"
async-trait = "0.1.88"
url = "2.5.4"
# miette = "5.10.0"
walkdir = { version = "2.5.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http-cache-reqwest = "0.15.1"

[dev-dependencies]
opensearch-testcontainer = { workspace = true }
testcontainers = "0.24.0"
tracing-test = "0.2.5"


[features]
default = []
full = [
    "search",       # search features
    "cat",
    "cluster",
    "indices",
    "ingest",
    "nodes",
    "ml",
    "mtermvectors",
    "remote",
    "security",
    "snapshot",
    "tasks",
    "tools",
]
quickwit = []
search = ["dep:opensearch-dsl"]
cat = []
cluster = []
indices = ["search"]
ingest = []
nodes = []
mtermvectors = []
ml = []
remote = []
security = []
snapshot = []
tasks = []
# custom features
tools = ["indices", "ingest", "dep:walkdir", "ml"]
