[package]
name = "opensearch-client"
description = "Strongly typed OpenSearch Client"
version.workspace = true
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }


[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.14", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
http = "1.3.1"
base64 = "0.22.1"
anyhow = "1.0.100"
thiserror = "2.0.16"
tracing = { version = "0.1.41" }
bon = { version = "3.7.2", optional = true }

opensearch-dsl = { workspace = true, optional = true }
opensearch-macro = { workspace = true }
# client stuff
# task-local-extensions = "0.1.4"
loco-rs = { version = "0.16", optional = true, default-features = false }
axum = { version = "0.8", optional = true, default-features = false }
walkdir = { version = "2.5.0", optional = true }
futures = { version = "0.3.31", optional = true }


[dev-dependencies]
opensearch-testcontainer = { workspace = true }
testcontainers = "0.25.0"
tracing-test = "0.2.5"

[features]
default = ["bon", "search", "indices", "ingest", "cluster", "ml"]
bon = ["dep:bon"]

full = [
    "search",              # search features
    "asynchronous_search", # asynchronous search features
    "cat",
    "cluster",
    "dangling_indices",
    "indices",
    "ingest",
    "insights",
    "ism",
    "knn",
    "ml",
    "nodes",
    "notifications",
    "observability",
    "ppl",
    "remote_store",
    "replication",
    "rollups",
    "security",
    "snapshot",
    "sql",
    "tasks",
    "transforms",
    "tools",
]


quickwit = []
# loco RS error mangement 
loco = ["dep:loco-rs", "dep:axum"]
search = ["dep:opensearch-dsl", "dep:futures"]
asynchronous_search = []
cat = []
cluster = []
dangling_indices = []
indices = ["search"]
ingest = []
insights = []
ism = []
knn = []
ml = []
nodes = []
notifications = []
observability = []
ppl = []
remote_store = []
replication = []
rollups = []
security = []
snapshot = []
sql = []
tasks = []
transforms = []
# custom features
tools = ["indices", "ingest", "dep:walkdir", "ml", "dep:futures"]
