[package]
name = "opensearch-dsl"
description = "Strongly typed OpenSearch DSL"
version.workspace = true
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
license = "MIT OR Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "serde",
] }
num-traits = "0.2.19"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
