[package]
name = "opensearch-macro"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
darling = "0.21.3"
proc-macro2 = "1.0"
heck = "0.5.0"

[dev-dependencies]
opensearch-client = { path = "../opensearch-client" }
serde = { version = "1.0", features = ["derive"] }
