[package]
name = "opensearch-testcontainer"
description = "Testcontainer for OpenSearch"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords = [
    "docker",
    "testcontainers",
    "testcontainer",
    "opensearch",
    "integration-test",
]
readme = "README.md"

[dependencies]
testcontainers = "0.25.0"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "*", features = ["full"] }
