[package]
name = "opensearch-testcontainer"
description = "Testcontainer for OpenSearch"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords = [
    "docker",
    "testcontainers",
    "testcontainer",
    "opensearch",
    "integration-test",
]
readme = "README.md"

[dependencies]
testcontainers = "0.25.2"

[dev-dependencies]
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
