[package]
name = "handle-search-response"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensearch-dsl = { path = "../../opensearch-dsl/" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
